# firefly

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
assets/: crate.aseprite
assets/shaders/: multiply.wgsl
examples/: README.md  blending.rs  crates.rs  examples.md  flashlight.rs  fov.rs  grid_stress.rs  noise.rs  render_layers.rs  shapes.rs  shapes_test.rs  simple.rs  stress.rs
release-notes/: 0.18.1  0.18.1(Unreleased).md  0.18.1-alpha.md  0.18.1.md  0.18.2(Unreleased).md  0.18.3-0.18.4  0.18.3-0.18.4.md  0.19.0.md
shaders/: apply_lightmap.wgsl  create_lightmap.wgsl  sprite.wgsl  transfer.wgsl  types.wgsl  utils.wgsl
src/: app.rs  buffers.rs  change.rs  data.rs  extract.rs  lib.rs  lights.rs  nodes.rs  occluders.rs  phases.rs  pipelines.rs  prepare.rs  sprites.rs  utils.rs  visibility.rs
src/occluders/: convex_decomposition.rs  mod.rs  render.rs  shape.rs
src/shaders/: apply_lightmap.wgsl  create_lightmap.wgsl  sprite.wgsl  types.wgsl  utils.wgsl
src/sprites/: mod.rs  phase.rs  pipeline.rs  texture_slice.rs
