[package]
name = "bevy_firefly"
description = "2d lighting crate for the Bevy game engine"
repository = "https://github.com/PVDoriginal/firefly/"
license = "MIT OR Apache-2.0"
keywords = ["gamedev", "graphics", "2d", "lighting", "bevy"]
version = "0.16.12"
edition = "2024"

[dependencies]
bevy = "0.16"
bitflags = "2.10.0"
bytemuck = "1.24.0"
fixedbitset = "0.5.7"

[dev-dependencies]
rand = "0.9.2"
iyes_perf_ui = "0.5"

