[package]
name = "bevy_firefly"
description = "2d lighting crate for the Bevy game engine"
repository = "https://github.com/PVDoriginal/firefly/"
license = "MIT OR Apache-2.0"
keywords = ["gamedev", "graphics", "2d", "lighting", "bevy"]
version = "0.16.13"
edition = "2024"

[dependencies]
bevy = { version = "0.16", default-features = false, features = ["bevy_gizmos", "bevy_core_pipeline", "bevy_winit", "bevy_sprite", "x11", "bevy_log", "async_executor"] }

bitflags = "2.10.0"
bytemuck = "1.24.0"
fixedbitset = "0.5.7"

[dev-dependencies]
rand = "0.9.2"
iyes_perf_ui = "0.5"
bevy = { version = "0.16" }